--- a/app/assets/stylesheets/jpstudy/media_tools.scss
+++ b/app/assets/stylesheets/jpstudy/media_tools.scss
@@ -2,12 +2,16 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  .explanation {
+    font-size: 0.9em;
+    margin: -12px 0px 8px 0px;
+  }
   .japanese-to-audio-form {
     max-width: 400px;
     width: 100%;
     label {
-      display: block;
-      padding: 8px 0px 5px 0px;
+      display: inline-block;
+      padding: 14px 0px 5px 0px;
       font-weight: 500;
     }
     input[type="text"] {
@@ -23,8 +27,36 @@
         outline-color: #3B82F6;
       }
     }
+    textarea {
+      font-size: 1.1em;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+      padding: 12px;
+      height: 12px;
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
+      height: auto; // required to make html row setting work
+      width: calc(100% - 26px);
+      &:focus {
+        outline-color: #3B82F6;
+      }
+    }
     input[type="submit"] {
-      margin-top: 12px;
+      margin-top: 16px;
+    }
+    .inline-explanation {
+      display: inline;
+      margin-left: 5px;
+    }
+  }
+  .download-link {
+    max-width: 400px;
+    width: 100%;
+    display: flex;
+    margin-top: 36px;
+    align-items: center;
+    justify-content: center;
+    svg {
+      margin-left: 4px;
     }
   }
 }
