--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -10,14 +10,14 @@
     <% end %>
   </h1>
 
-  <div class="next-kanji-container" data-controller="kanji">
+  <div class="next-kanji-container" data-controller="clipboard">
     <% if @next_kanji %>
       <div class="next-kanji-card">
-        <button class="copy-kanji-button" data-action="click->kanji#copy" title="Click to copy character">
-          <%= heroicon "clipboard", variant: :outline, options: { class: "copy-kanji-icon", "data-kanji-target" => "copyIcon" } %>
-          <%= heroicon "check", variant: :outline, options: { class: "kanji-coppied-icon", "data-kanji-target" => "checkIcon" } %>
+        <button class="copy-kanji-button" data-action="click->clipboard#copy" title="Click to copy character">
+          <%= heroicon "clipboard", variant: :outline, options: { class: "copy-kanji-icon", "data-clipboard-target" => "copyIcon" } %>
+          <%= heroicon "check", variant: :outline, options: { class: "kanji-coppied-icon", "data-clipboard-target" => "checkIcon" } %>
         </button>
-        <span class="character" data-kanji-target="character">
+        <span class="character" data-clipboard-target="copySource">
           <%= @next_kanji.character %>
         <span>
       </div>
