--- a/app/views/media_tools/audio.html.erb
+++ b/app/views/media_tools/audio.html.erb
@@ -33,7 +33,7 @@
         rel: "noopener noreferrer",
 
       ) do %>
-        <%= @filename %>
+        <span class="filename"><%= @filename %></span>
         <%= heroicon "clipboard-check", variant: :outline %>
       <% end %>
 
