--- a/app/assets/stylesheets/jpstudy/users.scss
+++ b/app/assets/stylesheets/jpstudy/users.scss
@@ -78,6 +78,9 @@
     display: flex;
     align-content: center;
     color: #8B5CF6;
+    a {
+      color: #8B5CF6;
+    }
   }
   .contact {
     font-style: italic;
