Small UI cleanup on kanji wall

--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -171,9 +171,9 @@
   }
   .kanji-count {
     margin: 0;
-    width: 100%;
     text-align: center;
     font-size: 0.9em;
+    color: #9CA3AF;
   }
   .kanji-wall {
     margin-top: 30px;
