--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -102,7 +102,7 @@
         .copy-kanji-icon {
           color: #d1d5db;
         }
-        .kanji-coppied-icon {
+        .kanji-copied-icon {
           color: #10B981;
         }
       }
