--- a/app/assets/stylesheets/jpstudy/media_tools.scss
+++ b/app/assets/stylesheets/jpstudy/media_tools.scss
@@ -71,7 +71,7 @@
       .copy-icon {
         color: #d1d5db;
       }
-      .coppied-icon {
+      .copied-icon {
         color: #10B981;
       }
     }
