--- a/app/views/media_tools/audio.html.erb
+++ b/app/views/media_tools/audio.html.erb
@@ -37,7 +37,7 @@
         <% end %>
         <button class="copy-audio-link-button" data-action="click->clipboard#copy" title="Click to copy audio link">
           <%= heroicon "clipboard", variant: :outline, options: { class: "copy-icon", "data-clipboard-target" => "copyIcon" } %>
-          <%= heroicon "check", variant: :outline, options: { class: "coppied-icon hidden", "data-clipboard-target" => "checkIcon" } %>
+          <%= heroicon "check", variant: :outline, options: { class: "copied-icon hidden", "data-clipboard-target" => "checkIcon" } %>
         </button>
       </div>
 
