Fix another typo

--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -1,5 +1,5 @@
 <div class="keyboard-shortcuts-page">
-  <h1 class="title">Keboard shortcuts</h1>
+  <h1 class="title">Keyboard shortcuts</h1>
 
   <p>
     From the start, jpstudy.app was built as a tool to help optimize a Japanese language learner's study time. If you're a power user at heart and clicking around the site isn't fast enough for you, then this is what you've been looking for; keyboard shortcuts. 👩‍💻
