--- a/app/assets/stylesheets/jpstudy/users.scss
+++ b/app/assets/stylesheets/jpstudy/users.scss
@@ -94,19 +94,20 @@
     justify-content: center;
     .stats-card {
       margin: 12px;
-      padding: 8px 12px;
+      padding: 8px 12px 4px 12px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       border-style: solid;
       border-width: 1px;
       border-color: #F3F4F6;
       border-radius: 4px;
+      height: fit-content;
       min-width: 275px;
       @media (max-width: 673px) {
         width: 100%;
       }
       .catagory-subtitle {
         margin: 4px 0px 8px 0px;
-        font-weight: 400;
+        font-weight: 500;
         color: #8B5CF6;
       }
       p {
