--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -30,11 +30,11 @@
       </div>
 
       <div class="stats-card">
+        <%= link_to edit_targets_user_path, class: "edit-link", title: "Edit your study targets" do %>
+          <%= heroicon "pencil-alt", variant: :outline, options: { class: "icon" } %>
+        <% end %>
         <h4 class="catagory-subtitle">
           <span>Study targets:</span>
-          <%= link_to edit_targets_user_path, class: "edit-link light-gray", title: "Edit your study targets" do %>
-            <%= heroicon "pencil-alt", variant: :outline, options: { class: "icon" } %>
-          <% end %>
         </h4>
         <p>
           <span class="light-gray">Next learning goal:</span>
@@ -94,11 +94,11 @@
       </div>
 
       <div class="stats-card">
+        <%= link_to edit_targets_user_path, class: "edit-link", title: "Edit your study targets" do %>
+          <%= heroicon "pencil-alt", variant: :outline, options: { class: "icon" } %>
+        <% end %>
         <h4 class="catagory-subtitle">
           <span>Study targets:</span>
-          <%= link_to edit_targets_user_path, class: "edit-link light-gray", title: "Edit your study targets" do %>
-            <%= heroicon "pencil-alt", variant: :outline, options: { class: "icon" } %>
-          <% end %>
         </h4>
         <p>
           <span class="light-gray">Next learning goal:</span>
