--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -16,20 +16,6 @@
 
     <div class="stats-card-container">
       <div class="stats-card">
-        <h4 class="catagory-subtitle">
-          Totals:
-        </h4>
-        <p>
-          <span class="light-gray">Words with cards created:</span>
-          <%= @words_with_cards_created_count %>
-        </p>
-        <p>
-          <span class="light-gray">Words ready for cards:</span>
-          <%= @words_ready_for_cards_count %>
-        </p>
-      </div>
-
-      <div class="stats-card">
         <%= link_to edit_targets_user_path, class: "edit-link", title: "Edit your study targets" do %>
           <%= heroicon "pencil-alt", variant: :outline, options: { class: "icon" } %>
         <% end %>
@@ -37,7 +23,7 @@
           <span>Study targets:</span>
         </h4>
         <p>
-          <span class="light-gray">Next learning goal:</span>
+          <span class="light-gray">Learning goal:</span>
           <% if @current_user.next_word_goal %>
             <%= pluralize @current_user.next_word_goal, "word" %>
           <% else %>
@@ -45,9 +31,9 @@
           <% end %>
         </p>
         <p>
-          <span class="light-gray">Study target:</span>
+          <span class="light-gray">Daily target:</span>
           <% if @current_user.daily_word_target %>
-            <%= pluralize @current_user.daily_word_target, "new card" %> per day
+            <%= pluralize @current_user.daily_word_target, "word" %> per day
           <% else %>
             <%= link_to "not set", edit_targets_user_path, class: "link-blue", title: "Edit your study targets" %>
           <% end %>
@@ -69,6 +55,20 @@
           </p>
         <% end %>
       </div>
+
+      <div class="stats-card">
+        <h4 class="catagory-subtitle">
+          Totals:
+        </h4>
+        <p>
+          <span class="light-gray">New words ready for cards:</span>
+          <%= @words_ready_for_cards_count %>
+        </p>
+        <p>
+          <span class="light-gray">Words with cards created:</span>
+          <%= @words_with_cards_created_count %>
+        </p>
+      </div>
     </div>
 
     <h3 class="catagory-title">
@@ -80,20 +80,6 @@
 
     <div class="stats-card-container">
       <div class="stats-card">
-        <h4 class="catagory-subtitle">
-          Totals:
-        </h4>
-        <p>
-          <span class="light-gray">Kanji added:</span>
-          <%= @kanji_added_count %>
-        </p>
-        <p>
-          <span class="light-gray">New kanji to add:</span>
-          <%= @kanji_to_add_count %>
-        </p>
-      </div>
-
-      <div class="stats-card">
         <%= link_to edit_targets_user_path, class: "edit-link", title: "Edit your study targets" do %>
           <%= heroicon "pencil-alt", variant: :outline, options: { class: "icon" } %>
         <% end %>
@@ -101,7 +87,7 @@
           <span>Study targets:</span>
         </h4>
         <p>
-          <span class="light-gray">Next learning goal:</span>
+          <span class="light-gray">Learning goal:</span>
           <% if @current_user.next_kanji_goal %>
             <%= @current_user.next_kanji_goal %> kanji
           <% else %>
@@ -109,7 +95,7 @@
           <% end %>
         </p>
         <p>
-          <span class="light-gray">Study target:</span>
+          <span class="light-gray">Daily target:</span>
           <% if @current_user.daily_kanji_target %>
             <%= @current_user.daily_kanji_target %> kanji per day
           <% else %>
@@ -132,6 +118,24 @@
             <%= distance_of_time_in_words(@days_to_kanji_target.days) %>
           </p>
         <% end %>
+      </div>
+
+      <div class="stats-card">
+        <h4 class="catagory-subtitle">
+          Totals:
+        </h4>
+        <p>
+          <span class="light-gray">New kanji:</span>
+          <%= @kanji_to_add_count %>
+        </p>
+        <p>
+          <span class="light-gray">Kanji added:</span>
+          <%= @kanji_added_count %>
+        </p>
+        <p>
+          <span class="light-gray">Kanji skipped:</span>
+          <%= @kanji_skipped_count %>
+        </p>
       </div>
     </div>
   </div>
