--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,13 +20,20 @@
     <strong>
       Trial <%= @user.trial_active? ? "expires" : "expired" %>:
     </strong>
-    <%= @user.trial_ends_at&.strftime("%m/%d/%Y") %>
+    <%= @user.trial_ends_at&.strftime("%b %d, %Y") %>
   </p>
 
   <p class="word-limit-field">
     <strong>Word limit:</strong>
     <span class="<%= @current_user.can_add_more_words? ? "" : "alert-red" %>">
-      <%= @user.word_limit || "None" %>
+      <% if @user.word_limit %>
+        <span class="<%= @current_user.can_add_more_words? ? "light-gray" : "alert-red" %>">
+          <%= @user.words.size %> /
+        </span>
+        <%= @user.word_limit %>
+      <% else %>
+        None
+      <% end %>
     </span>
     <%= link_to(content_limits_path, title: "What are content limits?") do %>
       <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
@@ -36,7 +43,14 @@
   <p class="kanji-limit-field">
     <strong>Kanji limit:</strong>
     <span class="<%= @current_user.can_add_more_kanji? ? "" : "alert-red" %>">
-      <%= @user.kanji_limit || "None" %>
+      <% if @user.kanji_limit %>
+        <span class="<%= @current_user.can_add_more_kanji? ? "light-gray" : "alert-red" %>">
+          <%= @user.kanji.size %> /
+        </span>
+        <%= @user.kanji_limit %>
+      <% else %>
+        None
+      <% end %>
     </span>
     <%= link_to(content_limits_path, title: "What are content limits?") do %>
       <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
