--- a/app/views/words/_filters.html.erb
+++ b/app/views/words/_filters.html.erb
@@ -1,6 +1,6 @@
 <div class="filters">
   <% if params[:search] %>
-    <%= link_to words_path(filter_params_minus(:search)), title: "Your search", class: "search-results" do %>
+    <%= link_to words_path(@current_user, filter_params_minus(:search)), title: "Your search", class: "search-results" do %>
       <%= heroicon "search", variant: :outline %>
       <span class="filter-description">
         You searched: '<%= params[:search]&.strip %>'
@@ -8,14 +8,14 @@
     <% end %>
   <% end %>
   <% if params[:order] == "oldest_first" %>
-    <%= link_to words_path(filter_params_minus(:order)), title: "Showing oldest words first", class: "filter-on" do %>
+    <%= link_to words_path(@current_user, filter_params_minus(:order)), title: "Showing oldest words first", class: "filter-on" do %>
       <%= heroicon "arrow-up" %> <%# gets flipped in CSS %>
       <span class="filter-description">
         Oldest first
       </span>
     <% end %>
   <% else %>
-    <%= link_to words_path(filter_params_plus(order: "oldest_first")), title: "Showing newest words first", class: "filter-off" do %>
+    <%= link_to words_path(@current_user, filter_params_plus(order: "oldest_first")), title: "Showing newest words first", class: "filter-off" do %>
       <%= heroicon "arrow-up" %>
       <span class="filter-description">
         Newest first
@@ -23,14 +23,14 @@
     <% end %>
   <% end %>
   <% if params[:filter] == "cards_not_created" %>
-    <%= link_to words_path(filter_params_minus(:filter)), title: "Only showing words without cards", class: "filter-on" do %>
+    <%= link_to words_path(@current_user, filter_params_minus(:filter)), title: "Only showing words without cards", class: "filter-on" do %>
       <%= heroicon "adjustments" %> <%# gets flipped in CSS %>
       <span class="filter-description">
         Words without cards
       </span>
     <% end %>
   <% else %>
-    <%= link_to words_path(filter_params_plus(filter: "cards_not_created")), title: "Showing all words", class: "filter-off" do %>
+    <%= link_to words_path(@current_user, filter_params_plus(filter: "cards_not_created")), title: "Showing all words", class: "filter-off" do %>
       <%= heroicon "adjustments" %>
       <span class="filter-description">
         Unfiltered
