--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,6 +1,6 @@
 <div class="words-list-page">
   <h1 class="page-title">
-    <%= link_to "Words", words_path, class: "home-link" %>
+    <%= link_to "Words", words_path(@current_user), class: "home-link" %>
     <%= link_to(word_list_instructions_path, title: "What does this feature do?") do %>
       <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
     <% end %>
@@ -26,7 +26,7 @@
 
       <%= render "words/noscript/pagination" %>
       <% if @next_page %>
-        <%= turbo_frame_tag "words_#{@next_page}", loading: :lazy, src: words_path(filter_params_plus(page: @next_page)) do %>
+        <%= turbo_frame_tag "words_#{@next_page}", loading: :lazy, src: words_path(@current_user, filter_params_plus(page: @next_page)) do %>
           <div class="loading-container">
             <% cache("skeleton_words_v1", skip_digest: true) do %>
               <% WordsController::WORDS_PER_PAGE.times do %>
