--- a/app/views/users/in_out.html.erb
+++ b/app/views/users/in_out.html.erb
@@ -9,13 +9,13 @@
 
   <div class="actions">
     <%= link_to "Import words", import_words_path(@current_user), class: "button-purple" %>
-    <%= link_to "Import kanji", import_kanji_path, class: "button-purple" %>
+    <%= link_to "Import kanji", import_kanji_path(@current_user), class: "button-purple" %>
   </div>
 
   <h3 class="tool-title">Export tools:</h3>
   <div class="actions">
     <%= link_to "Export words", export_words_path(@current_user), class: "button-blue" %>
-    <%= link_to "Export kanji", export_kanji_path, class: "button-blue" %>
+    <%= link_to "Export kanji", export_kanji_path(@current_user), class: "button-blue" %>
   </div>
 
   <div class="danger-zone">
@@ -41,7 +41,7 @@
       ) %>
       <%= button_to(
         "Delete all kanji",
-        destroy_all_kanji_path,
+        destroy_all_kanji_path(@current_user),
         method: :delete,
         class: "button-red",
         data: {
