--- a/app/views/application/_main_nav_links.html.erb
+++ b/app/views/application/_main_nav_links.html.erb
@@ -1,16 +1,16 @@
-<%= link_to(@current_user ? words_path(@current_user) : login_path) do %>
+<%= link_to(@current_user ? words_path(@current_user) : login_path, id: "words-link") do %>
   <%= heroicon "collection" %>
   <small class="icon-subtext">Words</small>
 <% end %>
-<%= link_to(@current_user ? next_kanji_path(@current_user) : login_path) do %>
+<%= link_to(@current_user ? next_kanji_path(@current_user) : login_path, id: "kanji-link") do %>
   <%= heroicon "puzzle" %>
   <small class="icon-subtext">Kanji</small>
 <% end %>
-<%= link_to(@current_user ? search_words_path(@current_user) : login_path) do %>
+<%= link_to(@current_user ? search_words_path(@current_user) : login_path, id: "word-search-link") do %>
   <%= heroicon "search", variant: :outline %>
   <small class="icon-subtext">Search</small>
 <% end %>
-<%= link_to(@current_user ? stats_user_path(@current_user) : login_path, id: "stats-nav-link") do %>
+<%= link_to(@current_user ? stats_user_path(@current_user) : login_path, id: "user-stats-link") do %>
   <%= heroicon "presentation-chart-bar" %>
   <small class="icon-subtext">Stats</small>
 <% end %>
