--- a/app/views/application/_main_nav_links.html.erb
+++ b/app/views/application/_main_nav_links.html.erb
@@ -1,20 +1,20 @@
-<%= link_to(@current_user ? words_path(@current_user) : login_path, id: "words-link") do %>
+<%= link_to(@current_user ? words_path(@current_user) : login_path(destination: "R01"), id: "words-link") do %>
   <%= heroicon "collection" %>
   <small class="icon-subtext">Words</small>
 <% end %>
-<%= link_to(@current_user ? next_kanji_path(@current_user) : login_path, id: "kanji-link") do %>
+<%= link_to(@current_user ? next_kanji_path(@current_user) : login_path(destination: "R02"), id: "kanji-link") do %>
   <%= heroicon "puzzle" %>
   <small class="icon-subtext">Kanji</small>
 <% end %>
-<%= link_to(@current_user ? search_words_path(@current_user) : login_path, id: "word-search-link") do %>
+<%= link_to(@current_user ? search_words_path(@current_user) : login_path(destination: "R03"), id: "word-search-link") do %>
   <%= heroicon "search", variant: :outline %>
   <small class="icon-subtext">Search</small>
 <% end %>
-<%= link_to(@current_user ? stats_user_path(@current_user) : login_path, id: "user-stats-link") do %>
+<%= link_to(@current_user ? stats_user_path(@current_user) : login_path(destination: "R04"), id: "user-stats-link") do %>
   <%= heroicon "presentation-chart-bar" %>
   <small class="icon-subtext">Stats</small>
 <% end %>
-<%= link_to(@current_user ? in_out_user_path(@current_user) : login_path, class: "in-out-link") do %>
+<%= link_to(@current_user ? in_out_user_path(@current_user) : login_path(destination: "R05"), class: "in-out-link") do %>
   <%= heroicon "switch-vertical" %>
   <small class="icon-subtext">I/O</small>
 <% end %>
@@ -22,7 +22,7 @@
   <%= heroicon "heart" %>
   <small class="icon-subtext">About</small>
 <% end %>
-<%= link_to(@current_user ? @current_user : login_path) do %>
+<%= link_to(@current_user ? @current_user : login_path(destination: "R06")) do %>
   <%= heroicon "user-circle" %>
   <small class="icon-subtext">Profile</small>
 <% end %>
